--- a/Billed-app-FR-Front/package.json
+++ b/Billed-app-FR-Front/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jest --coverage --noStackTrace --silent"
+    "test": "jest --coverage --noStackTrace --silent --watch"
   },
   "jest": {
     "verbose": false,
@@ -20,9 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "global": "^4.4.0",
-    "jest-cli": "^29.5.0",
     "jquery": "^3.5.1",
-    "live-server": "^1.2.2",
     "path": "^0.12.7"
   },
   "devDependencies": {
