--- a/Billed-app-FR-Front/package.json
+++ b/Billed-app-FR-Front/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jest --coverage --noStackTrace --silent --watch"
+    "test": "jest --coverage --noStackTrace --silent --watchAll"
   },
   "jest": {
     "verbose": false,
@@ -32,7 +32,7 @@
     "@testing-library/user-event": "^12.0.11",
     "babel-jest": "^26.1.0",
     "jest": "^26.1.0",
-    "jest-environment-jsdom": "^27.4.6",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-html-reporter": "^3.1.3"
   }
 }
